done with the locations column

--- a/House Prediction Model.ipynb
+++ b/House Prediction Model.ipynb
@@ -65,83 +65,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8913</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>20-Dec</td>\n",
-       "      <td>Banashankari Stage VI</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>Brens7</td>\n",
-       "      <td>1180</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>59.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6205</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>18-Aug</td>\n",
-       "      <td>Kodihalli</td>\n",
-       "      <td>4 BHK</td>\n",
-       "      <td>Soianal</td>\n",
-       "      <td>3260</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>388.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7362</th>\n",
-       "      <td>Super built-up  Area</td>\n",
-       "      <td>18-May</td>\n",
-       "      <td>Ramagondanahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>ViistLa</td>\n",
-       "      <td>1475</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>63.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8393</th>\n",
+       "      <th>1475</th>\n",
        "      <td>Super built-up  Area</td>\n",
        "      <td>Ready To Move</td>\n",
-       "      <td>Hebbal Kempapura</td>\n",
+       "      <td>Vittasandra</td>\n",
        "      <td>2 BHK</td>\n",
-       "      <td>Goateds</td>\n",
-       "      <td>1400</td>\n",
+       "      <td>Prlla C</td>\n",
+       "      <td>1246</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>108.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>68.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>640</th>\n",
+       "      <th>7537</th>\n",
+       "      <td>Plot  Area</td>\n",
+       "      <td>Ready To Move</td>\n",
+       "      <td>Yediyur</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>225.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12036</th>\n",
        "      <td>Super built-up  Area</td>\n",
-       "      <td>18-Aug</td>\n",
-       "      <td>Mahadevpura</td>\n",
+       "      <td>19-Mar</td>\n",
+       "      <td>Sarjapur  Road</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>AsastDe</td>\n",
+       "      <td>1112</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1879</th>\n",
+       "      <td>Super built-up  Area</td>\n",
+       "      <td>Ready To Move</td>\n",
+       "      <td>OMBR Layout</td>\n",
        "      <td>2 BHK</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1225</td>\n",
+       "      <td>1041</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>48.00</td>\n",
+       "      <td>65.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7005</th>\n",
+       "      <td>Built-up  Area</td>\n",
+       "      <td>Ready To Move</td>\n",
+       "      <td>Richmond Town</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>145.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 area_type   availability               location   size  \\\n",
-       "8913  Super built-up  Area         20-Dec  Banashankari Stage VI  2 BHK   \n",
-       "6205  Super built-up  Area         18-Aug              Kodihalli  4 BHK   \n",
-       "7362  Super built-up  Area         18-May       Ramagondanahalli  3 BHK   \n",
-       "8393  Super built-up  Area  Ready To Move       Hebbal Kempapura  2 BHK   \n",
-       "640   Super built-up  Area         18-Aug            Mahadevpura  2 BHK   \n",
+       "                  area_type   availability        location       size  \\\n",
+       "1475   Super built-up  Area  Ready To Move     Vittasandra      2 BHK   \n",
+       "7537             Plot  Area  Ready To Move         Yediyur  4 Bedroom   \n",
+       "12036  Super built-up  Area         19-Mar  Sarjapur  Road      2 BHK   \n",
+       "1879   Super built-up  Area  Ready To Move     OMBR Layout      2 BHK   \n",
+       "7005         Built-up  Area  Ready To Move   Richmond Town      3 BHK   \n",
        "\n",
-       "      society total_sqft  bath  balcony   price  \n",
-       "8913  Brens7        1180   2.0      1.0   59.47  \n",
-       "6205  Soianal       3260   5.0      3.0  388.00  \n",
-       "7362  ViistLa       1475   2.0      2.0   63.00  \n",
-       "8393  Goateds       1400   2.0      2.0  108.00  \n",
-       "640       NaN       1225   2.0      2.0   48.00  "
+       "       society total_sqft  bath  balcony  price  \n",
+       "1475   Prlla C       1246   2.0      1.0   68.0  \n",
+       "7537       NaN       1140   3.0      2.0  225.0  \n",
+       "12036  AsastDe       1112   2.0      1.0   62.0  \n",
+       "1879       NaN       1041   2.0      2.0   65.5  \n",
+       "7005       NaN       1100   2.0      1.0  145.0  "
       ]
      },
      "execution_count": 3,
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "96e3a7e4",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
        "<AxesSubplot:xlabel='price', ylabel='Count'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "80eb219c",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "[146 rows x 6 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "d04c3064",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
        "        680., 1824., 3600.,  988., 2800.])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "00db6ad2",
    "metadata": {},
    "outputs": [],
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "e8f52eba",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "4                  Kothanur      2 BHK       1200   2.0      1.0   51.00    2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "077f2f36",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
        "(13246, 7)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "a6fb8d40",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "       13, 18], dtype=int64)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "id": "d97ecaed",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "11559  200.0   18  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,17 +1199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "id": "847c8e43",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1718, 4684)"
+       "(1718, 4684, 1768, 3379, 3853, 4916, 6533, 11559)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "83fc538b",
    "metadata": {},
    "outputs": [],
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "dda6c81d",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1240,7 @@
        "(13238, 7)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "0753e6a5",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1418,7 @@
        "[743 rows x 7 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "745c9e4e",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "id": "ec633f7b",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1609,7 @@
        "672    4  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "153fbd5c",
    "metadata": {},
    "outputs": [],
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "id": "c4ede2f8",
    "metadata": {},
    "outputs": [],
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "6ac70272",
    "metadata": {},
    "outputs": [],
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "id": "67d53d23",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1679,7 @@
        "Name: total_sqft, Length: 13238, dtype: float64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,18 +1690,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "1abbcd39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13238, 8)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df4 = df3.copy()\n",
-    "df4['price_per_sqft'] = df4['price']*100000/df4['total_sqft']"
+    "df4['price_per_sqft'] = df4['price']*100000/df4['total_sqft']\n",
+    "df4.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "id": "8e8bf2f4",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1824,7 @@
        "4    2     4250.000000  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,11 +1835,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a359865d",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1298"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df4.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "23561bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>balcony</th>\n",
+       "      <th>price</th>\n",
+       "      <th>BHK</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3699.810606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4615.384615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4305.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6245.890861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4250.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath  balcony   price  \\\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0      1.0   39.07   \n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0      3.0  120.00   \n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0      3.0   62.00   \n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0      1.0   95.00   \n",
+       "4                  Kothanur      2 BHK      1200.0   2.0      1.0   51.00   \n",
+       "\n",
+       "   BHK  price_per_sqft  \n",
+       "0    2     3699.810606  \n",
+       "1    4     4615.384615  \n",
+       "2    3     4305.555556  \n",
+       "3    3     6245.890861  \n",
+       "4    2     4250.000000  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df4.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6fb96bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Whitefield                     535\n",
+       "Sarjapur  Road                 392\n",
+       "Electronic City                304\n",
+       "Kanakpura Road                 266\n",
+       "Thanisandra                    236\n",
+       "                              ... \n",
+       "Karnataka Shabarimala            1\n",
+       "Kasthuri Nagar East Of NGEF      1\n",
+       "Kathriguppe IV Phase             1\n",
+       "Keerthi Layout                   1\n",
+       "whitefiled                       1\n",
+       "Name: location, Length: 1287, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to remove the extra spaces in the locations\n",
+    "df4.location = df4.location.apply(lambda x: x.strip())\n",
+    "locations_stats = df4.groupby('location')['location'].agg('count').sort_values(ascending=False)\n",
+    "locations_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f038be88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1046"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now putting all the locations which have less than 10 data points be referred to as others\n",
+    "len(locations_stats[locations_stats<=10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6e02fc04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Nagappa Reddy Layout           10\n",
+       "Ganga Nagar                    10\n",
+       "1st Block Koramangala          10\n",
+       "Naganathapura                  10\n",
+       "Dairy Circle                   10\n",
+       "                               ..\n",
+       "Karnataka Shabarimala           1\n",
+       "Kasthuri Nagar East Of NGEF     1\n",
+       "Kathriguppe IV Phase            1\n",
+       "Keerthi Layout                  1\n",
+       "whitefiled                      1\n",
+       "Name: location, Length: 1046, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locations_with_less_than_10_datapoints = locations_stats[locations_stats<=10]\n",
+    "locations_with_less_than_10_datapoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "49a78d59",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df4.location = df4.location.apply(lambda x: 'Others' if x in locations_with_less_than_10_datapoints else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3d7907",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.unique"
+   ]
   }
  ],
  "metadata": {
