starting withe outlier

--- a/House Prediction Model.ipynb
+++ b/House Prediction Model.ipynb
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "23561bb8",
+   "id": "9c5d08f4",
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6fb96bfb",
+   "id": "3ce3dbc3",
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2015,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f038be88",
+   "id": "e7b6b3a4",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "6e02fc04",
+   "id": "77ee2e39",
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "49a78d59",
+   "id": "4d17b599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2080,13 +2080,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "82ddfdbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df4.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2e3d7907",
+   "id": "699dbf7d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df4.unique"
-   ]
+   "source": []
   }
  ],
  "metadata": {
