done and started with the model building

--- a/House Prediction Model.ipynb
+++ b/House Prediction Model.ipynb
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "0762537e",
+   "id": "53ea88ab",
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "85ad1f70",
+   "id": "f60cf795",
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2779,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "26e6dc6d",
+   "id": "fcb6911d",
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9994478e",
+   "id": "7a7ce007",
    "metadata": {},
    "outputs": [
     {
@@ -2838,7 +2838,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4b5e6ad4",
+   "id": "d55df4d3",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c81e97ec",
+   "id": "75da9602",
    "metadata": {},
    "outputs": [
     {
@@ -2896,7 +2896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c292a51",
+   "id": "e6a9334d",
    "metadata": {},
    "source": [
     "# Outlier Removal Using Bathrooms Feature"
@@ -2905,7 +2905,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "3d2fc573",
+   "id": "cc5395bd",
    "metadata": {},
    "outputs": [
     {
@@ -2926,7 +2926,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "3fe8f1d8",
+   "id": "845c7fae",
    "metadata": {},
    "outputs": [
     {
@@ -3048,7 +3048,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "fbaea785",
+   "id": "bcbcaffb",
    "metadata": {},
    "outputs": [
     {
@@ -3084,7 +3084,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "904ac4b1",
+   "id": "8fed4edd",
    "metadata": {},
    "outputs": [
     {
@@ -3192,13 +3192,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "546655d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7251, 8)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df8 = df7[df7.bath<df7.BHK+2]\n",
+    "df8.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5a02bb09",
+   "id": "5b6e0141",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df8 = df7[df7.bath>data4.BHK+2]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
