done with the project now building my own in order to test my learning

--- a/House Prediction Model.ipynb
+++ b/House Prediction Model.ipynb
@@ -3256,7 +3256,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7b1a79a0",
+   "id": "a7a6f7a4",
    "metadata": {},
    "outputs": [
     {
@@ -3378,7 +3378,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "73908843",
+   "id": "952bbd78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3388,7 +3388,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e13f02c9",
+   "id": "3721cbf2",
    "metadata": {},
    "outputs": [
     {
@@ -3456,7 +3456,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "5e3070b3",
+   "id": "c18dafc5",
    "metadata": {},
    "outputs": [
     {
@@ -3554,7 +3554,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b8569c82",
+   "id": "adbfbea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3564,7 +3564,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "5e99d386",
+   "id": "9d45caeb",
    "metadata": {},
    "outputs": [
     {
@@ -3796,7 +3796,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "71f8e2a3",
+   "id": "4292ebf4",
    "metadata": {},
    "outputs": [
     {
@@ -4021,7 +4021,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "1ac02b3a",
+   "id": "513a21d0",
    "metadata": {},
    "outputs": [
     {
@@ -4245,7 +4245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36dc5cd2",
+   "id": "dade7c67",
    "metadata": {},
    "source": [
     "# Build a Model Now"
@@ -4254,7 +4254,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "d56e267a",
+   "id": "af99e1d3",
    "metadata": {},
    "outputs": [
     {
@@ -4275,7 +4275,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "7a05ce1d",
+   "id": "b2903f64",
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "2dc65f8b",
+   "id": "a743b0f0",
    "metadata": {},
    "outputs": [
     {
@@ -4527,7 +4527,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "469f8b1b",
+   "id": "299461ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4537,7 +4537,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "cbf88d3e",
+   "id": "a2a09ef0",
    "metadata": {},
    "outputs": [
     {
@@ -4560,7 +4560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec29801d",
+   "id": "ef9ec7d1",
    "metadata": {},
    "source": [
     "# Use K Fold cross validation to measure accuracy of our LinearRegression model"
@@ -4569,7 +4569,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "bd67cc11",
+   "id": "57d69612",
    "metadata": {},
    "outputs": [
     {
@@ -4595,7 +4595,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "871c2001",
+   "id": "7ce921fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4608,7 +4608,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "68920534",
+   "id": "5dcb04bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4652,7 +4652,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "81c6ccf4",
+   "id": "d42fdb2c",
    "metadata": {},
    "outputs": [
     {
@@ -4838,7 +4838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9535752d",
+   "id": "f125fba4",
    "metadata": {},
    "source": [
     "### Based on above results we can say that LinearRegression gives the best score. Hence we will use that"
@@ -4846,7 +4846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ad9b87",
+   "id": "3e83e6d6",
    "metadata": {},
    "source": [
     "## Test the model for few properties"
@@ -4855,7 +4855,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "8d22030f",
+   "id": "84b2abf7",
    "metadata": {},
    "outputs": [
     {
@@ -4884,7 +4884,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "c6387f94",
+   "id": "4600392b",
    "metadata": {},
    "outputs": [
     {
@@ -4905,7 +4905,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "602dba6c",
+   "id": "a8d49b7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4923,7 +4923,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "5837f97b",
+   "id": "37852704",
    "metadata": {},
    "outputs": [
     {
@@ -4952,7 +4952,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "b4a5e559",
+   "id": "f48c4147",
    "metadata": {},
    "outputs": [
     {
@@ -4986,7 +4986,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0e5293c3",
+   "id": "5124945c",
    "metadata": {},
    "outputs": [
     {
@@ -5014,8 +5014,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 135,
+   "id": "7d993454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can do a and b testing to check whether this model  is really better then the new model which we select"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1c1a2760",
+   "id": "2267738a",
    "metadata": {},
    "outputs": [],
    "source": []
